# libgender_age_model.so

./: CMakeLists.txt  Dockerfile  README.md  build.sh  predict.py  run.sh
include/: RrConfig.h  ThreadPool.h  args_parser.h  predictor.h  singleton.h
include/mkldnn/: dnnl_version.h
opencv-3.4.5/modules/stitching/: CMakeLists.txt
opencv-3.4.5/samples/python/tutorial_code/ImgTrans/Filter2D/: __init__.py
src/: .predictor.cpp.swp  RrConfig.cpp  args_parser.cpp  c_export.cpp  predictor.cpp
